; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/bluetooth/esp_ble_mesh/ble_mesh_vendor_models/fast_prov_vendor_model/components/extr_esp_fast_prov_operation.c_example_find_model.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/bluetooth/esp_ble_mesh/ble_mesh_vendor_models/fast_prov_vendor_model/components/extr_esp_fast_prov_operation.c_example_find_model.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CID_NVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @example_find_model(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* null, i32** %8, align 8
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @ESP_BLE_MESH_ADDR_IS_UNICAST(i32 %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  br label %32

13:                                               ; preds = %3
  %14 = load i32, i32* %5, align 4
  %15 = call i32* @esp_ble_mesh_find_element(i32 %14)
  store i32* %15, i32** %8, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %19, label %18

18:                                               ; preds = %13
  store i32* null, i32** %4, align 8
  br label %32

19:                                               ; preds = %13
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* @CID_NVAL, align 4
  %22 = icmp eq i32 %20, %21
  br i1 %22, label %23, label %27

23:                                               ; preds = %19
  %24 = load i32*, i32** %8, align 8
  %25 = load i32, i32* %6, align 4
  %26 = call i32* @esp_ble_mesh_find_sig_model(i32* %24, i32 %25)
  store i32* %26, i32** %4, align 8
  br label %32

27:                                               ; preds = %19
  %28 = load i32*, i32** %8, align 8
  %29 = load i32, i32* %7, align 4
  %30 = load i32, i32* %6, align 4
  %31 = call i32* @esp_ble_mesh_find_vendor_model(i32* %28, i32 %29, i32 %30)
  store i32* %31, i32** %4, align 8
  br label %32

32:                                               ; preds = %27, %23, %18, %12
  %33 = load i32*, i32** %4, align 8
  ret i32* %33
}

declare dso_local i32 @ESP_BLE_MESH_ADDR_IS_UNICAST(i32) #1

declare dso_local i32* @esp_ble_mesh_find_element(i32) #1

declare dso_local i32* @esp_ble_mesh_find_sig_model(i32*, i32) #1

declare dso_local i32* @esp_ble_mesh_find_vendor_model(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
